--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,11 @@
-hi~
+<div class="container">
+  {{#each farms}}
+  <div class="card" style="width: 18rem;">
+    <img src="{{this.Photo}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">{{this.Name}}
+      </p>
+    </div>
+  </div>
+  {{/each}}
+</div>
